--- a/_includes/industry.html
+++ b/_includes/industry.html
@@ -12,7 +12,7 @@
         <h3 class="cv-toggle">Data Analyst & ML Engineer</h3>
         <p class="cv-institution">
           <a href="https://integrify.io/" target="_blank">Integrify</a>, 
-          <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
+          (Remote) Finland
         </p>
         <div class="cv-details">
           <p>Completed an industry-focused bootcamp in Data Analytics and Statistical Learning (Machine and Deep Learning) at the Integrify International Academy.</p>
@@ -30,7 +30,7 @@
         <h3 class="cv-toggle">Trainee Consultant</h3>
         <p class="cv-institution">
           <a href="https://www.prifina.com/" target="_blank">Prifina</a>, 
-          <a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki, Finland</a>
+          (Remote) USA
         </p>
         <div class="cv-details">
           <p>Combined data acquisitions from frameworks (API and WebScraping) to collect user information.</p>
