--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,6 @@
   <a href="{{ '/' | relative_url }}">Home</a>
   <a href="{{ '/about.html' | relative_url }}">About</a>
   <a href="{{ '/cv.html' | relative_url }}">CV</a>
+  <a href="{{ '/hobbies.html' | relative_url }}">Hobbies</a>
   <a href="{{ '/#contact' | relative_url }}">Contact</a>
 </nav>
